--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "haolinj-node-pg-migrate-redshift",
-  "version": "3.7.1",
-  "description": "Note that this is a fork from https://github.com/salsita/node-pg-migrate and used to support AWS Redshift migration. Postgresql database migration management tool for node.js",
+  "name": "node-pg-migrate",
+  "version": "3.7.0",
+  "description": "Postgresql database migration management tool for node.js",
   "author": "Theo Ephraim",
   "contributors": [
     "Jan Doležel <dolezel.jan@gmail.com> (http://www.eithel.net/)",
